force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/National_Outings_Subcommittee_Values__mdt.object-meta.xml
<CustomObject>
    <label>National Outings Subcommittee_Values</label>
    <pluralLabel>National Outings Subcommittee_Values</pluralLabel>
</CustomObject>