force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Conservation_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Allocation__c</fullName>
    <label>Conservation Allocation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>