force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Copying__c.field-meta.xml
<CustomField>
    <fullName>Copying__c</fullName>
    <label>Copying</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>