force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/First_Last_Meals__c.field-meta.xml
<CustomField>
    <fullName>First_Last_Meals__c</fullName>
    <label>First/Last Meals</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>