force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Full_Day_Meals__c.field-meta.xml
<CustomField>
    <fullName>Full_Day_Meals__c</fullName>
    <label>Full Day Meals</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>