force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Postage__c.field-meta.xml
<CustomField>
    <fullName>Postage__c</fullName>
    <label>Postage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>