force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Subsistence__c.field-meta.xml
<CustomField>
    <fullName>Subsistence__c</fullName>
    <label>Subsistence</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>