force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Supplies__c.field-meta.xml
<CustomField>
    <fullName>Supplies__c</fullName>
    <label>Supplies</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>