force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>