force-app/main/default/objects/National_Outings_Subcommittee_Values__mdt/fields/TRAIL_Code__c.field-meta.xml
<CustomField>
    <fullName>TRAIL_Code__c</fullName>
    <label>TRAIL Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>